Quick fix to show list bullets again
List bullets were hidden by applying the overflow: hidden property too generously.

--- a/static/dib.css
+++ b/static/dib.css
@@ -208,6 +208,10 @@ p.card-text {
   overflow: hidden;
 }
 
+.initiative-text ul, .initiative-text ol {
+  overflow: visible;
+}
+
 .initiative-text .classification {
   margin-bottom: 0;
   padding-bottom: 1rem;
